@@ -3,6 +3,6 @@ Title = "ngstk hander configuration file"
 [hander]
 [hander.default_handers]
 hander_funs = ["handler_na_replace", "handler_lower", "handler_upper",
-               "handler_value_map", "handler_extract", "handler_split",
+               "handler_value_map", "handler_extract", "handler_replace", "handler_split",
                "handler_prefix", "handler_postfix"]
 descripition = "ngstk default hander lib"
