@@ -1,3 +1,7 @@
+2017-10-10 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
+                * muts2mutation_mapper be added in R/cbioportal_trasefer.R
+                * inst/extdata/config/cbioportal.toml be added
+                
 2017-09-30 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
                 * R/hander.R, R/mhander.R and R/filter.R be added
